fix: title typo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Upload CSV and Plot Coordinates (DMS to Decimal)</h1>
+    <h1>Upload CSV and Plot Coordinates </h1>
     <input type="file" id="csvFileInput" accept=".csv" />
     <button onclick="processCSV()">Plot Coordinates</button>
     <br><br>
