--- a/mapleaf.html
+++ b/mapleaf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaflet Polygon Example</title>
+    <title>Leaflet Multiple Polygons Example</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
     <style>
         #map {
@@ -21,31 +21,19 @@
 </head>
 <body>
 
-    <h1>Create a Polygon with Leaflet</h1>
+    <h1>Create Multiple Polygons with Leaflet</h1>
     
+    <!-- Step 1: Choose number of polygons -->
+    <form id="polygonCountForm">
+        <label for="polygonCount">How many polygons do you want to draw? </label>
+        <input type="number" id="polygonCount" min="1" max="5" required>
+        <button type="submit">Next</button>
+    </form>
+
     <!-- Coordinate Input Form -->
-    <form id="coordinateForm">
-        <div class="input-container">
-            <label>Coordinate 1 (Lat, Lng): </label>
-            <input type="number" id="lat1" placeholder="Latitude 1" step="any" required>
-            <input type="number" id="lng1" placeholder="Longitude 1" step="any" required>
-        </div>
-        <div class="input-container">
-            <label>Coordinate 2 (Lat, Lng): </label>
-            <input type="number" id="lat2" placeholder="Latitude 2" step="any" required>
-            <input type="number" id="lng2" placeholder="Longitude 2" step="any" required>
-        </div>
-        <div class="input-container">
-            <label>Coordinate 3 (Lat, Lng): </label>
-            <input type="number" id="lat3" placeholder="Latitude 3" step="any" required>
-            <input type="number" id="lng3" placeholder="Longitude 3" step="any" required>
-        </div>
-        <div class="input-container">
-            <label>Coordinate 4 (Lat, Lng): </label>
-            <input type="number" id="lat4" placeholder="Latitude 4" step="any" required>
-            <input type="number" id="lng4" placeholder="Longitude 4" step="any" required>
-        </div>
-        <button type="submit">Draw Polygon</button>
+    <form id="coordinateForm" style="display: none;">
+        <div id="coordinateSets"></div> <!-- Dynamically populated coordinate inputs -->
+        <button type="submit">Draw Polygons</button>
     </form>
 
     <!-- Div to display the map -->
@@ -56,7 +44,7 @@
 
     <script>
         // Initialize the map and set the default view
-        var map = L.map('map').setView([0, 0], 2); // Set default to (0, 0) and zoom level 2
+        var map = L.map('map').setView([0, 0], 2); // Default to (0, 0) and zoom level 2
 
         // Add OpenStreetMap tile layer
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -64,27 +52,61 @@
             attribution: '© OpenStreetMap'
         }).addTo(map);
 
-        // Form submit event listener
+        // Colors for the polygons
+        const colors = ['blue', 'green', 'red', 'orange', 'purple'];
+
+        // Handle the polygon count form submission
+        document.getElementById('polygonCountForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+            var polygonCount = parseInt(document.getElementById('polygonCount').value);
+
+            // Generate coordinate input forms based on polygon count
+            generateCoordinateForms(polygonCount);
+
+            // Show the coordinate form
+            document.getElementById('coordinateForm').style.display = 'block';
+        });
+
+        // Function to dynamically generate coordinate input forms
+        function generateCoordinateForms(polygonCount) {
+            var coordinateSetsDiv = document.getElementById('coordinateSets');
+            coordinateSetsDiv.innerHTML = ''; // Clear previous inputs
+
+            for (let i = 1; i <= polygonCount; i++) {
+                // Create a coordinate set input for each polygon
+                let coordinateSetHTML = `
+                    <h3>Polygon ${i}:</h3>
+                    <div class="input-container">
+                        <label>Coordinate 1 (Lat, Lng): </label>
+                        <input type="number" id="lat${i}_1" placeholder="Latitude 1" step="any" required>
+                        <input type="number" id="lng${i}_1" placeholder="Longitude 1" step="any" required>
+                    </div>
+                    <div class="input-container">
+                        <label>Coordinate 2 (Lat, Lng): </label>
+                        <input type="number" id="lat${i}_2" placeholder="Latitude 2" step="any" required>
+                        <input type="number" id="lng${i}_2" placeholder="Longitude 2" step="any" required>
+                    </div>
+                    <div class="input-container">
+                        <label>Coordinate 3 (Lat, Lng): </label>
+                        <input type="number" id="lat${i}_3" placeholder="Latitude 3" step="any" required>
+                        <input type="number" id="lng${i}_3" placeholder="Longitude 3" step="any" required>
+                    </div>
+                    <div class="input-container">
+                        <label>Coordinate 4 (Lat, Lng): </label>
+                        <input type="number" id="lat${i}_4" placeholder="Latitude 4" step="any" required>
+                        <input type="number" id="lng${i}_4" placeholder="Longitude 4" step="any" required>
+                    </div>
+                `;
+                coordinateSetsDiv.insertAdjacentHTML('beforeend', coordinateSetHTML);
+            }
+        }
+
+        // Form submit event listener for drawing polygons
         document.getElementById('coordinateForm').addEventListener('submit', function (e) {
             e.preventDefault(); // Prevent page refresh on form submission
 
-            // Get input values from the form
-            var lat1 = parseFloat(document.getElementById('lat1').value);
-            var lng1 = parseFloat(document.getElementById('lng1').value);
-            var lat2 = parseFloat(document.getElementById('lat2').value);
-            var lng2 = parseFloat(document.getElementById('lng2').value);
-            var lat3 = parseFloat(document.getElementById('lat3').value);
-            var lng3 = parseFloat(document.getElementById('lng3').value);
-            var lat4 = parseFloat(document.getElementById('lat4').value);
-            var lng4 = parseFloat(document.getElementById('lng4').value);
-
-            // Coordinates for the polygon
-            var coordinates = [
-                [lat1, lng1],
-                [lat2, lng2],
-                [lat3, lng3],
-                [lat4, lng4]
-            ];
+            // Get the number of polygons
+            var polygonCount = parseInt(document.getElementById('polygonCount').value);
 
             // Clear any existing layers (polygons)
             map.eachLayer(function (layer) {
@@ -93,11 +115,37 @@
                 }
             });
 
-            // Fit the map view to the polygon bounds
-            map.fitBounds(coordinates);
+            // Loop through each polygon set and draw them
+            for (let i = 1; i <= polygonCount; i++) {
+                var lat1 = parseFloat(document.getElementById(`lat${i}_1`).value);
+                var lng1 = parseFloat(document.getElementById(`lng${i}_1`).value);
+                var lat2 = parseFloat(document.getElementById(`lat${i}_2`).value);
+                var lng2 = parseFloat(document.getElementById(`lng${i}_2`).value);
+                var lat3 = parseFloat(document.getElementById(`lat${i}_3`).value);
+                var lng3 = parseFloat(document.getElementById(`lng${i}_3`).value);
+                var lat4 = parseFloat(document.getElementById(`lat${i}_4`).value);
+                var lng4 = parseFloat(document.getElementById(`lng${i}_4`).value);
 
-            // Draw the polygon
-            var polygon = L.polygon(coordinates, { color: 'blue' }).addTo(map);
+                // Coordinates for the current polygon
+                var coordinates = [
+                    [lat1, lng1],
+                    [lat2, lng2],
+                    [lat3, lng3],
+                    [lat4, lng4]
+                ];
+
+                // Draw the polygon with a unique color
+                L.polygon(coordinates, { color: colors[i - 1] }).addTo(map);
+            }
+
+            // Zoom to fit the bounds of all polygons
+            var bounds = [];
+            map.eachLayer(function (layer) {
+                if (layer instanceof L.Polygon) {
+                    bounds = bounds.concat(layer.getLatLngs()[0]);
+                }
+            });
+            map.fitBounds(bounds);
         });
     </script>
 
