fix: map responsivesness and logic #002

--- a/mapleaf.html
+++ b/mapleaf.html
@@ -91,6 +91,8 @@
             for (let i = 1; i <= polygonCount; i++) {
                 let polygonHTML = `
                     <h3>Polygon ${i}:</h3>
+                    <label for="name${i}">Name of Polygon: </label>
+                    <input type="text" id="name${i}" required placeholder="Polygon ${i} Name">
                     <label for="points${i}">How many coordinates? (min 3): </label>
                     <input type="number" id="points${i}" min="3" required value="4">
                     <div id="coordinateSet${i}"></div>
@@ -163,6 +165,7 @@
             for (let i = 1; i <= polygonCount; i++) {
                 var points = parseInt(document.getElementById(`points${i}`).value);
                 var coordinates = [];
+                var name = document.getElementById(`name${i}`).value;
 
                 for (let j = 1; j <= points; j++) {
                     var latInput = document.getElementById(`lat${i}_${j}`).value;
@@ -180,7 +183,7 @@
 
                 // Draw the polygon with a unique color
                 var polygon = L.polygon(coordinates, { color: colors[i - 1] }).addTo(map);
-                polygons.push({ polygon: polygon, color: colors[i - 1], name: `Polygon ${i}` });
+                polygons.push({ polygon: polygon, color: colors[i - 1], name: name });
             }
 
             // Fit map to bounds of all polygons
