--- a/mapleaf.html
+++ b/mapleaf.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaflet Polygons with Automatic Coordinate Detection</title>
+    <title>Map Polygon plotter</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
     <style>
         #map {
-            height: 400px;
+            height: 600px;
             width: 100%;
             margin-top: 20px;
         }
@@ -36,11 +36,11 @@
 </head>
 <body>
 
-    <h1>Polygons with Automatic DMS or Decimal Input</h1>
+    <h1>Map Polygon plotter</h1>
     
     <!-- Step 1: Choose number of polygons -->
     <form id="polygonCountForm">
-        <label for="polygonCount">How many polygons do you want to draw? </label>
+        <label for="polygonCount">How many polygons do you want to plot? </label>
         <input type="number" id="polygonCount" min="1" max="5" required>
         <button type="submit">Next</button>
     </form>
@@ -48,7 +48,7 @@
     <!-- Coordinate Input Form -->
     <form id="coordinateForm" style="display: none;">
         <div id="coordinateSets"></div> <!-- Dynamically populated coordinate inputs -->
-        <button type="submit">Draw Polygons</button>
+        <button type="submit">Draw the map</button>
     </form>
 
     <!-- Div to display the map -->
